--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  # hive database
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.14
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +45,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # hive database
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
