App renamed with rename dependency

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = quick_note
+PRODUCT_NAME = Quick Notes;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.shaypram.quickNote
+PRODUCT_BUNDLE_IDENTIFIER = com.shaypram.quicknotes;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.shaypram. All rights reserved.
