--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shaypram.quick_note">
    <application
-        android:label="quick_note"
+        android:label="Quick Notes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
