--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.shaypram" "\0"
-            VALUE "FileDescription", "quick_note" "\0"
+            VALUE "FileDescription", "Quick Notes" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "quick_note" "\0"
+            VALUE "InternalName", "Quick Notes" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.shaypram. All rights reserved." "\0"
             VALUE "OriginalFilename", "quick_note.exe" "\0"
-            VALUE "ProductName", "quick_note" "\0"
+            VALUE "ProductName", "Quick Notes" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
